populate countries in country dropdown

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,9 @@
     Welcome to {{ title }}!
   </h1>
   <img width="250" height="300" alt="Angular Logo" src="/assets/images/HomePageIcon.png">
+  <div class="address-section">
+    <app-country></app-country>
+  </div>
+  
 </div>
-
-<app-country></app-country>
-
 <router-outlet></router-outlet>
