--- a/src/app/address-fields/address-fields.component.html
+++ b/src/app/address-fields/address-fields.component.html
@@ -1,3 +1,8 @@
-<p>
-  address-fields works!
-</p>
+<div >
+  <ng-container *ngIf="addressFields.length > 0">
+    <div *ngFor="let field of addressFields;let i = index" class="field-section">
+      <span>{{field}} : </span>
+      <input type="text" />
+    </div>
+  </ng-container>
+</div>
