--- a/src/app/address-fields/address-fields.component.html
+++ b/src/app/address-fields/address-fields.component.html
@@ -2,7 +2,10 @@
   <ng-container *ngIf="addressFields.length > 0">
     <div *ngFor="let field of addressFields;let i = index" class="field-section">
       <span>{{field}} : </span>
-      <input type="text" />
+      <input type="text" *ngIf="addressFieldTypes[i] == 'string'"/>
+      <select *ngIf="addressFieldTypes[i] == 'list'">
+        <option value="">-- Select --</option>
+      </select>
     </div>
   </ng-container>
 </div>
