--- a/src/app/address-fields/address-fields.component.html
+++ b/src/app/address-fields/address-fields.component.html
@@ -2,8 +2,8 @@
   <ng-container *ngIf="addressFields.length > 0">
     <div *ngFor="let field of addressFields;let i = index" class="field-section">
       <span>{{field}} : </span>
-      <input type="text" *ngIf="addressFieldTypes[i] == 'string'"/>
-      <select *ngIf="addressFieldTypes[i] == 'list'">
+      <input [id]="keys[i]" type="text" *ngIf="addressFieldTypes[i] == 'string'"/>
+      <select [id]="keys[i]" *ngIf="addressFieldTypes[i] == 'list'">
         <option value="">-- Select --</option>
       </select>
     </div>
