added search button

--- a/src/app/address-fields/address-fields.component.html
+++ b/src/app/address-fields/address-fields.component.html
@@ -7,5 +7,6 @@
         <option value="">-- Select --</option>
       </select>
     </div>
+    <button class="button" (click)="searchAddress()">Search Address</button>
   </ng-container>
 </div>
