modified button style

--- a/src/app/address-fields/address-fields.component.scss
+++ b/src/app/address-fields/address-fields.component.scss
@@ -1,3 +1,9 @@
 .field-section {
     margin: 5px 0px 0px -150px;
 }
+
+.button {
+    margin-top: 20px;
+    background-color: #007AFF;
+    color:white;
+}
