add save address functionality

--- a/src/app/address-fields/address-fields.component.html
+++ b/src/app/address-fields/address-fields.component.html
@@ -7,6 +7,10 @@
         <option value="">-- Select --</option>
       </select>
     </div>
-    <button class="button" (click)="searchAddress()">Search Address</button>
+    <div class="button-group">
+      <button class="button" (click)="searchAddress()">Search Address</button>
+      <button class="button" (click)="postAddress()">Save Address</button>
+    </div>
+   
   </ng-container>
 </div>
