--- a/src/app/address-fields/address-fields.component.scss
+++ b/src/app/address-fields/address-fields.component.scss
@@ -6,4 +6,9 @@
     margin-top: 20px;
     background-color: #007AFF;
     color:white;
+    margin-right:10px;
+}
+
+.button-group {
+   float:center;
 }
