--- a/src/app/address-fields/address-fields.component.html
+++ b/src/app/address-fields/address-fields.component.html
@@ -1,8 +1,8 @@
 <div >
   <ng-container *ngIf="addressFields.length > 0">
     <div *ngFor="let field of addressFields;let i = index" class="field-section">
-      <span>{{field}} : </span>
-      <input [id]="keys[i]" (keyup)="onKey($event)" type="text" *ngIf="addressFieldTypes[i] == 'string'"/>
+      <span>{{field}} </span>
+      <input [id]="keys[i]" (keyup)="onKey($event)" type="text" *ngIf="addressFieldTypes[i] == 'String'"/>
       <select [id]="keys[i]" (change)="selected($event)" *ngIf="addressFieldTypes[i] == 'list' ">
         <option value="">-- Select --</option>
         <option *ngFor="let entry of addressFieldValues[i]" value= {{entry}}>
